--- a/static/css/header.css
+++ b/static/css/header.css
@@ -8,6 +8,12 @@
     /* --baseContainer: 1400px; */
 }
 
+body {
+    font-family: "Gowun Dodum", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
 ::placeholder {
     color: black;
 }
@@ -25,7 +31,7 @@ header {
     margin: 0 auto;
     background-color: #ffde59;
     width: 100%;
-    z-index: 1;
+    z-index: 999;
     top: 0;
     position: fixed;
     display: flex;
