--- a/static/css/index.css
+++ b/static/css/index.css
@@ -11,22 +11,36 @@
 /* 라벨 */
 .label {
     position: absolute; /* 절대적인 위치 설정 */
-    top: 15px; /* 이미지 상단에서 10px 떨어진 위치에 배치 */
-    left: 15px; /* 이미지 왼쪽에서 10px 떨어진 위치에 배치 */
-    background-color: rgba(0, 0, 0, 0.5); /* 배경색 지정 */
-    color: white; /* 텍스트 색상 지정 */
+    bottom: 50px; /* 이미지 상단에서 10px 떨어진 위치에 배치 */
+    left: 5px; /* 이미지 왼쪽에서 10px 떨어진 위치에 배치 */
     padding: 5px; /* 안쪽 여백 지정 */
     border-radius: 5px; /* 테두리 모서리를 둥글게 설정 */
+    border: 5px solid #ffc064;
+    border-radius: 15px;
+    background-color: white; /* 배경색 지정 */
+    color: black; /* 텍스트 색상 지정 */
+    font-weight: 800;
 }
 
 .labelStar {
     position: absolute; /* 절대적인 위치 설정 */
-    top: 15px; /* 이미지 상단에서 10px 떨어진 위치에 배치 */
-    left: 120px; /* 이미지 왼쪽에서 10px 떨어진 위치에 배치 */
-    background-color: white; /* 배경색 지정 */
-    color: black; /* 텍스트 색상 지정 */
+    bottom: 10px; /* 이미지 상단에서 10px 떨어진 위치에 배치 */
+    left: 9px; /* 이미지 왼쪽에서 10px 떨어진 위치에 배치 */
+
     padding: 5px; /* 안쪽 여백 지정 */
     border-radius: 5px; /* 테두리 모서리를 둥글게 설정 */
+    background-color: rgba(0, 0, 0, 0.5); /* 배경색 지정 */
+    color: white; /* 텍스트 색상 지정 */
+}
+
+.labelImage {
+    position: absolute; /* 절대적인 위치 설정 */
+    top: 15px; /* 이미지 상단에서 10px 떨어진 위치에 배치 */
+    right: 9px; /* 이미지 왼쪽에서 10px 떨어진 위치에 배치 */
+    padding: 5px; /* 안쪽 여백 지정 */
+    border-radius: 5px; /* 테두리 모서리를 둥글게 설정 */
+    background-color: rgba(0, 0, 0, 0.5); /* 배경색 지정 */
+    color: white; /* 텍스트 색상 지정 */
 }
 
 .RestaurantImage {
@@ -38,6 +52,16 @@
 /* 03/04 패딩값 변경 */
 body {
     padding-top: 160px;
+    background-color: #fff;
+    background-image: linear-gradient(
+            90deg,
+            transparent 79px,
+            #abced4 79px,
+            #abced4 81px,
+            transparent 81px
+        ),
+        linear-gradient(#eee 0.1em, transparent 0.1em);
+    background-size: 100% 1.2em;
 }
 
 .table1 {
