--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -75,6 +75,7 @@
                         <button class="signBtn">
                             <a href="/suggestion/list" style="text-decoration: none; color: black; font-weight: 600;">건의사항</a>
                             </div>
+                        </button>
                 </form>
             </div>
                 <% } else { %>
