--- a/views/suggestions/suggestionWrite.ejs
+++ b/views/suggestions/suggestionWrite.ejs
@@ -43,7 +43,7 @@
                     <textarea id="editor" class="content" name="content"><%- postInfo.content %></textarea>
                     <% } %>
                     <div class="btn-container">
-                    <button class="btn btn-info" onclick="return submitPost()">등록</button>
+                    <button class="btn-sug btn-post" onclick="return submitPost()">등록</button>
                 </div>
                 </form>
             </div>
