--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -73,7 +73,7 @@
                             마이페이지
                         </button>
                         <button class="signBtn">
-                            <a href="/suggestion/list" style="text-decoration: none; color: black; font-weight: 600;">건의사항</a>
+                            <a href="/suggestion/list?page=1" style="text-decoration: none; color: black; font-weight: 600;">건의사항</a>
                             </div>
                         </button>
                 </form>
@@ -82,7 +82,7 @@
                 <button id="signupBtn" class="signBtn" style="font-weight: 600;">회원가입</button>
                 <button id="loginBtn" class="signBtn" style="font-weight: 600;">로그인</button>
                 <button class="signBtn">
-                    <a href="/suggestion/list" style="text-decoration: none; color: black; font-weight: 600;" >건의사항</a>
+                    <a href="/suggestion/list?page=1" style="text-decoration: none; color: black; font-weight: 600;" >건의사항</a>
                 </button>
                 <% } %>
                 <br />
