--- a/views/mypage/profile.ejs
+++ b/views/mypage/profile.ejs
@@ -51,7 +51,7 @@
                 </div>
             </div>
         </main>
-        <% } catch(err) { %>
+        <% } catch(err) { %> 세션이 만료되었습니다. 다시 로그인 해주세요.
         <script>
             alert("세션이 만료되었습니다. 다시 로그인 해주세요.");
             window.location.href = "/";
