--- a/views/suggestions/suggestionList.ejs
+++ b/views/suggestions/suggestionList.ejs
@@ -11,8 +11,8 @@
         <%- include('../include/header.ejs',{isLogin, user}) %>
         <div class="main-container">
             <div class="cmm-title">
-            <img id="cmm-logo" src="/static/images/CMM-circle.png" alt="CMM_logo">
-            <h2>건의사항</h2>
+                <img src="/static/images/CMM-circle.png" alt="" style="width: 70px; height: auto; margin-top: -0.5rem; " />
+            <h1>&nbsp;&nbsp;건의사항</h1>
         </div>
             <hr size="3">
             <br><br>
