--- a/views/include/footer.ejs
+++ b/views/include/footer.ejs
@@ -2,11 +2,13 @@
     <!-- footer -->
     <div class="footerContent">
         <div class="logo">
-            <img
-                src="/static/images/CMM.png"
-                alt="로고 이미지"
-                style="width: 200px; height: 200px"
-            />
+            <a href="/">
+                <img
+                    src="/static/images/CMM.png"
+                    alt="로고 이미지"
+                    style="width: 200px; height: 200px"
+                />
+            </a>
         </div>
 
         <div class="createdBy">
