--- a/views/include/head.ejs
+++ b/views/include/head.ejs
@@ -14,6 +14,9 @@
     crossorigin="anonymous"
 ></script>
 
+<!-- 사용자 아이콘 -->
+<script src="https://kit.fontawesome.com/9ff27f4d50.js" crossorigin="anonymous"></script>
+
 <!-- CSS -->
 <link rel="stylesheet" href="/static/css/header.css" />
 <link rel="stylesheet" href="/static/css/footer.css" />
