--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,14 @@
             "
         >
             <img src="/static/images/CMM-circle.png" alt="" style="width: 70px; height: auto; margin-top: -0.5rem; " />
-            <h1>모든식당</h1>
+            
+            <% if (category) { %>
+                <h1><%=category%></h1>
+            <% } else { %>
+                <h1>모든식당</h1>
+            <% } %>
+           
+           
         </div>
         <br>
         <div>
@@ -33,7 +40,7 @@
 
         <div style="width: 1350px; margin: 0 auto">
             <div style="max-width: 1350px; margin: 0 auto; min-height: 250px;">
-                <div class="restaurantMenu" id="restaurantMenu1" style="padding-top: 50px">
+                <div class="restaurantMenu" id="restaurantMenu1" >
                     <div
                         class="restaurantContainer"
                         style="
@@ -44,14 +51,14 @@
                         "
                     >
                         <% for (let i = 0; i <restaurants.length; i++) { %>
-                        <div class="restaurantItem" style="max-width: 410px" >
+                        <div class="item" style="max-width: 410px" >
                             <a href="/restaurantDetail/<%=restaurants[i].rest_index%>">
-                                <div class="imageContainer">
+                                <div class="polaroid">
                                     <img
                                         src="/static/images/<%= restaurants[i].rest_index %>.png"
                                         alt="Restaurant 1"
                                         class="RestaurantImage"
-                                        style="width: 350px; height: 350px; box-shadow: 10px 5px 5px black;"
+                                        style="width: 350px; height: 350px; "
                                     />
                                     <span class="label"><%= restaurants[i].rest_name %></span>
                                     <span class="labelStar">
@@ -71,6 +78,7 @@
                                         <% } %>
                                     </span>
                                 </div>
+                              
                             </a>
                         </div>
                         <% } %>
